[package]
name = "extism-convert"
readme = "./README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
description = "Traits to make Rust types usable with Extism"

[dependencies]
anyhow = "1.0.75"
base64 = { version = "~0.22", optional = true }
bytemuck = {version = "1.14.0", optional = true }
prost = { version = "0.13.1", optional = true }
protobuf = { version = "3.2.0", optional = true }
rmp-serde = { version = "1.1.2", optional = true }
serde_json = { version = "1.0.105", optional = true }
serde = "1.0.186"
extism-convert-macros.workspace = true

[dev-dependencies]
serde = { version = "1.0.186", features = ["derive"] }

[features]
default = ["json", "base64", "msgpack", "prost", "raw"]
msgpack = ["rmp-serde"]
json = ["serde_json"]
raw = ["bytemuck"]
extism-path = ["extism-convert-macros/extism-path"]
extism-pdk-path = ["extism-convert-macros/extism-pdk-path"]
